# GitInsight

./: .gitignore  README.md  analysis.py  build_wheel.sh  charts.py  dashboard.py  git_reader.py  main.py  pyproject.toml  report.py
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: demand.md
gitinsight/: __main__.py  analysis.py  charts.py  dashboard.py  git_reader.py
