[project]
name = "gitinsight"
version = "0.1.0"
description = "A powerful collection of Git repository analysis tools and visualizations."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ryan", email = "ryan@example.com" }]
license = "MIT"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "pyecharts>=2.0.0",
    "tqdm>=4.67.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ryan/gitinsight"
"Bug Tracker" = "https://github.com/ryan/gitinsight/issues"

[project.scripts]
gitinsight = "gitinsight.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
default = true
